[package]
name = "wez-mdns"
version = "0.1.2"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["mdns", "discovery", "home-automation"]
categories = ["parser-implementations", "network-programming"]
authors = ["Wez Furlong <wez@wezfurlong.org>", "Paul Colomiets <paul@colomiets.name>"]
repository = "https://github.com/wez/mdns"
description = "Robust mDNS implementation for home automation"
documentation = "https://docs.rs/wez-mdns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-serde = ["serde"]

[dependencies]
byteorder = "1"
if-addrs = "0.10"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", optional = true, features = ["derive"]}
smol = "1.3"
socket2 = {version="0.5", features=["all"]}
thiserror = "1.0"

[dev-dependencies]
clap = {version="4.4", features=["derive"]}
k9 = "0.11"
